# lab14

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/exceptions/: exceptions.c  exceptions.h
